syntax = "proto3";
option java_package = "io.helidon.grpc.server.test";

service StringService {
  rpc Upper (StringMessage) returns (StringMessage) {}
  rpc Lower (StringMessage) returns (StringMessage) {}
  rpc Split (StringMessage) returns (stream StringMessage) {}
  rpc Join (stream StringMessage) returns (StringMessage) {}
  rpc Echo (stream StringMessage) returns (stream StringMessage) {}
}

message StringMessage {
  string text = 1;
}
